Implement spring user details service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 server.port=3001
+
+# spring security
+spring.security.user.name=foo
+spring.security.user.password=foo
